[CLEANUP] - Fixing some icons positions + Fixing siteMap not showing in IE8

--- a/cfr-core/resources/cdeComponents/FileBrowserComponent/component.css
+++ b/cfr-core/resources/cdeComponents/FileBrowserComponent/component.css
@@ -12,7 +12,7 @@
 	margin-left: -17px;
 	float: left;
 	cursor: pointer;
-	margin-top: 5px;
+	margin-top: 2px;
 }
 
 .fileBrowserComponent .treeview .expanded > .hitarea {
